# Nexus

./: .env.example  .gitignore  PROMPT_LOG.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
agents/: coral_agent.py  dispatch_agent.py  signal_agent.py  synthesis_agent.py  ticket_agent.py
api/: history.py  stream.py  webhook.py
coral/: client.py  mock_client.py  queries.py
db/: models.py  ops.py  session.py
docs/: 01_ARCHITECTURE.md  02_AGENT_PIPELINE.md  03_CORAL_DATA_LAYER.md  04_API_COMPLEXITY.md  05_STRUCTURE_SETUP.md  06_DEMO_SCRIPT.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentStatus.jsx  AgentStatus.test.jsx  MetricsBar.css  MetricsBar.jsx  TechnicalBrief.jsx  TicketQueue.jsx
frontend/src/hooks/: useSSE.js
integrations/: intercom.py  slack.py
mock_data/: brief_fallback_a.json  brief_fallback_b.json  brief_fallback_c.json  coral_result_a.json  scenario_b_all_null.json  ticket_checkout.json  ticket_false_alarm.json  ticket_login.json  ticket_payment.json  ticket_stripe_outage.json
models/: brief.py  signals.py  ticket.py
pipeline/: graph.py  state.py
scripts/: dry_run.py  smoke_test.py
tests/: conftest.py  coral_contract.py  test_coral_agent.py  test_coral_client.py  test_coral_client_error.py  test_coral_contract.py  test_coral_live.py  test_dispatch.py  test_history_main.py  test_signal_agent.py  test_stream.py  test_synthesis.py  test_webhook.py
